--- a/disenoWeb/ProyectoCoder/shop.html
+++ b/disenoWeb/ProyectoCoder/shop.html
@@ -23,14 +23,14 @@
                     <li class="nav-item"><a class="nav-link active" href="#">Juegos</a></li>
                     <li class="nav-item"><a class="nav-link"href="#">Evento</a></li>
                     <li class="nav-item"><a class="nav-link " href="#">Comunidad</a></li>
-                    <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Shop</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
                 </ul>
             </nav>
 
         </header>
         <section class="row"> 
-            <div class="col-lg-12 col-md-12 col-sm-12">
+            <div class="col-lg-12 col-md-12 col-sm-12" style="padding: 20px;">
                 <div class="carousel slide" data-bs-ride="carousel" id="miGaleria">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
@@ -93,11 +93,9 @@
 
         </section>
 
-        <div class="ancla_mueve ancla"><a href="#">Subir</a></div>
-
         <footer class="row">
             <div class="col-lg-6 col-md-6 col-sm-6">
-                <p>@desarrollado por Georgina</p>
+                <p>Desarrollado por Georgina</p>
 
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
