--- a/disenoWeb/ProyectoCoder/index.html
+++ b/disenoWeb/ProyectoCoder/index.html
@@ -24,7 +24,7 @@
                     <li class="nav-item"><a class="nav-link"href="#">Evento</a></li>
                     <li class="nav-item"><a class="nav-link " href="#">Comunidad</a></li>
                     <li class="nav-item"><a class="nav-link" href="shop.html">Shop</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
 
