--- a/disenoWeb/ProyectoCoder/shop.html
+++ b/disenoWeb/ProyectoCoder/shop.html
@@ -8,6 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link href="style.css"  rel="stylesheet">
      <!---->
+
+    
+    <!-- --> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello, world!</title>
   </head>
@@ -40,7 +43,7 @@
                     <div class="card-body">
                         <h5 class="card-title">adidas Boy's Entrada Jersey<h5>
                         <p class="card-text">Precio del producto</p>
-                        <a href="#" class="btn btn-primary"> Comprar</a>
+                        <a href="#" class="btn btn-primary" id="buy-now"> Comprar ahora</a>
 
                     </div>
                 </div>           
@@ -92,7 +95,8 @@
     </div>
 
 
-
+    <!--Javascript -->
+    <script src="index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
   </body>
